; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_pcvideo.c_PcVideoSetPaletteColor.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_pcvideo.c_PcVideoSetPaletteColor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VIDEOPORT_PALETTE_WRITE = common dso_local global i64 0, align 8
@VIDEOPORT_PALETTE_DATA = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @PcVideoSetPaletteColor(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i64, i64* @VIDEOPORT_PALETTE_WRITE, align 8
  %11 = inttoptr i64 %10 to i32*
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @WRITE_PORT_UCHAR(i32* %11, i32 %12)
  %14 = load i64, i64* @VIDEOPORT_PALETTE_DATA, align 8
  %15 = inttoptr i64 %14 to i32*
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @WRITE_PORT_UCHAR(i32* %15, i32 %16)
  %18 = load i64, i64* @VIDEOPORT_PALETTE_DATA, align 8
  %19 = inttoptr i64 %18 to i32*
  %20 = load i32, i32* %8, align 4
  %21 = call i32 @WRITE_PORT_UCHAR(i32* %19, i32 %20)
  %22 = load i64, i64* @VIDEOPORT_PALETTE_DATA, align 8
  %23 = inttoptr i64 %22 to i32*
  %24 = load i32, i32* %9, align 4
  %25 = call i32 @WRITE_PORT_UCHAR(i32* %23, i32 %24)
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @WRITE_PORT_UCHAR(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
